# personal_finance_manager

./: .gitignore  LICENCE  README.md  pyproject.toml
data/: .keep
design/: .keep
design/sample_data/: Barclaycard Transactions - 2016-04-06.csv  Barclaycard Transactions - 2024-12-05.csv  Barclays Childrens Savings Transactions - 2018-05-25.csv  Barclays Childrens Savings Transactions - 2025-01-08.csv  Barclays Current Transactions - 2018-05-14.csv  Barclays Current Transactions - 2024-07-12.csv  Barclays Savings Transactions - 2015-06-12.csv  Barclays Savings Transactions - 2024-07-08.csv  John Lewis Transactions - 2015-04-17.csv  John Lewis Transactions - 2022-04-16.csv  John Lewis Transactions - 2022-12-05.csv  John Lewis Transactions - 2025-05-09.csv
docs/: .keep
py_config/: .keep
resources/: .keep
resources/account_schemas/local/pfm/: barclaycard_v2016_cp1252.json  barclays_childrens_savings_v2017.json  barclays_current_v2018.json  barclays_savings_v2015.json  johnlewis_new_v2022_3col.json  johnlewis_new_v2025_4col.json  johnlewis_old_v2015_headerless.json  johnlewis_old_v2022_headered_cr.json
resources/lists/: .keep
resources/lists/local/pfm/: pfm_sql_code.txt
resources/lists/shared/: shared_sql_code.txt
scripts/: CreateFilesFromList.ps1  account_templates.txt  test_files.txt
src/: .keep
src/html/local/pfm/: pfm_summary_template.html
src/sql/local/pfm/: 10_create_indexes.sql  20_create_mapping_inbox.sql
src/sql/shared/: 01_create_institutions.sql  02_create_accounts.sql  03_create_statements.sql  04_create_transactions.sql
tests/: .keep
